[fix]#13515 white bg behind avatars

--- a/css/mobile/_tablette.scss
+++ b/css/mobile/_tablette.scss
@@ -131,10 +131,6 @@
 	nav.horizontal{
 		right: 0;
 		height: 50px;
-		#my-photo{
-			width: 25px;
-			margin-top: 4px;
-		}
 		> a, > popover a{
 			font-size: 14px;
 			margin-left: 2px;
