--- a/css/modules/_dominos.scss
+++ b/css/modules/_dominos.scss
@@ -36,6 +36,9 @@
                 & + span{
                     color: $white;
                 }
+                img{
+                    background: $white;
+                }
             }
             .bottom{
                 margin-top: 0;
